2009-05-19  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c: delete OCI8::BindType::Fixnum.
	* lib/oci8/compat.rb: add OCI8::BindType::Fixnum as an alias
	    of OCI8::BindType::Integer.
	* ext/oci8/extconf.rb: change extconf.rb's argument value of
	    '--with-oracle-version' to accept dotted version such as
	    '9.2.0.'
	* ext/oci8/oraconf.rb: When extconf.rb fails and it is run
	    by sudo command, change the error message to notice that
	    'sudo' may unset environment variables.

2009-05-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: revise rdoc comments for OCI8#ping and
	    OCI8#client_identifier=. Add OCI8#module=, OCI8#action= and
	    OCI8#client_info.
	* test/test_appinfo.rb: add test cases for OCI8#module=,
	    OCI8#action= and OCI8#client_info.

2009-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.1 and 2.0.2.
	* VERSION: change version to 2.0.2.
	* dist-files: append newly added files.
	* ext/oci8/oci8.c: fix OCI8#ping not to raise an exception
	    when OCIPing() failed. It should returns true or false.
	* ext/oci8/oci8lib.c: Memory allocated by xmalloc() should be
	    freed by xfree().

2009-05-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/error.c, ext/oci8/extconf.rb, ext/oci8/oci8.h:
	    fix the native library name in error messages from oci8lib.so
	    to oci8lib_18.so or oci8lib_191.so.
	* ext/oci8/ocinumber.c, test/test_oranumber.rb: fix OraNumber.new
	    to accept BigDecimal and Rational.
	* ext/oci8/bind.c, test/test_oci8.rb: implicitly convert the
	    specified number to Float when the bind handle is for Float.
	* ext/oci8/attr.c: fix for Oracle client which doesn't have
	    OCIRowidToChar().
	* ext/oci8/oci8.c, test/test_appinfo.rb, test/test_all.rb, dist-files:
	    add new methods OCI8#ping and OCI8#client_identifier=.
	    add test cases.
	* ext/oci8/oci8lib.c: fix a bug for Oracle 8.0.
	* lib/oci8/oci8.rb: add a convenient method OCI8#select_one
	    to fetch one row.
